feat: use jlink'd jdk to greatly reduce installer size