@@ -34,7 +34,64 @@ cp installer/appimage/rsprox.desktop build/linux-aarch64/
 cp installer/appimage/rsprox.png build/linux-aarch64/
 
 tar zxf linux_aarch64_jdk.tar.gz
-mv jdk-$LINUX_AARCH64_VERSION build/linux-aarch64/jdk
+jlink \
+  --compress 2 \
+  --strip-debug \
+  --no-header-files \
+  --no-man-pages \
+  --output build/linux-aarch64/jdk \
+  --module-path jdk-$LINUX_AARCH64_VERSION/jmods \
+  --add-modules java.base \
+  --add-modules java.compiler \
+  --add-modules java.datatransfer \
+  --add-modules java.desktop \
+  --add-modules java.instrument \
+  --add-modules java.logging \
+  --add-modules java.management \
+  --add-modules java.management.rmi \
+  --add-modules java.naming \
+  --add-modules java.net.http \
+  --add-modules java.prefs \
+  --add-modules java.rmi \
+  --add-modules java.scripting \
+  --add-modules java.se \
+  --add-modules java.security.jgss \
+  --add-modules java.security.sasl \
+  --add-modules java.smartcardio \
+  --add-modules java.sql \
+  --add-modules java.sql.rowset \
+  --add-modules java.transaction.xa \
+  --add-modules java.xml \
+  --add-modules java.xml.crypto \
+  --add-modules jdk.accessibility \
+  --add-modules jdk.charsets \
+  --add-modules jdk.crypto.cryptoki \
+  --add-modules jdk.crypto.ec \
+  --add-modules jdk.dynalink \
+  --add-modules jdk.httpserver \
+  --add-modules jdk.internal.ed \
+  --add-modules jdk.internal.le \
+  --add-modules jdk.jartool \
+  --add-modules jdk.jdwp.agent \
+  --add-modules jdk.jfr \
+  --add-modules jdk.jsobject \
+  --add-modules jdk.localedata \
+  --add-modules jdk.management \
+  --add-modules jdk.management.agent \
+  --add-modules jdk.management.jfr \
+  --add-modules jdk.naming.dns \
+  --add-modules jdk.naming.ldap \
+  --add-modules jdk.naming.rmi \
+  --add-modules jdk.net \
+  --add-modules jdk.pack \
+  --add-modules jdk.scripting.nashorn \
+  --add-modules jdk.scripting.nashorn.shell \
+  --add-modules jdk.sctp \
+  --add-modules jdk.security.auth \
+  --add-modules jdk.security.jgss \
+  --add-modules jdk.unsupported \
+  --add-modules jdk.xml.dom \
+  --add-modules jdk.zipfs
 
 pushd build/linux-aarch64
 mkdir -p jdk/lib/amd64/server/
